--- a/blog-node/src/components/NewsCard.astro
+++ b/blog-node/src/components/NewsCard.astro
@@ -4,8 +4,8 @@ const {Heading, Para, Image, Link, count, time} = Astro.props
 import Like from '/images/heart.png'
 ---
 
-<div class="news-card bg-[#181818] w-auto rounded-md text-center shadow-lg hover:shadow-slate-800 hover:scale-105 transition-transform">
-    <img src={Image} width={400} alt="" class="rounded-t-md">
+<div class="news-card bg-[#181818] w-auto rounded-md text-center shadow-lg hover:shadow-slate-800 hover:scale-105 transition-transform lg:mx-auto mx-32">
+    <img src={Image} width={400} alt="" class="rounded-t-md w-screen">
     <h1 class="p-3 text-left text-lg font-semibold">{Heading}</h1>
     <p class="p-3 text-justify text-sm">{Para} <span class="text-blue-500 font-semibold">
         <a href={Link}>
