--- a/blog-node/src/pages/event.astro
+++ b/blog-node/src/pages/event.astro
@@ -6,7 +6,7 @@ import Footer from "../components/Footer.astro";
 
 <body class="bg-black text-[#FFCB74]">
     <Navbar />
-    <p class="py-32 text-xl md:mx-40 mx-auto">
+    <p class="py-32  lg:text-xl text-2xl md:mx-40 mx-auto">
         Welcome to our Blog Node's Events section, where you can stay informed
         about the latest and most exciting events happening in our industry and
         community. We believe in keeping our readers engaged and connected, and
@@ -15,7 +15,7 @@ import Footer from "../components/Footer.astro";
         gatherings. Join us as we explore opportunities to learn, network, and
         expand your horizons.
     </p>
-    <div class="event-section grid grid-cols-2 lg:grid-cols-4 lg:p-5 p-16 lg:gap-5 gap-10">
+    <div class="event-section grid grid-cols-1 lg:grid-cols-4 lg:p-5 p-16 lg:gap-5 gap-10">
         <EventCard
             Image="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:ote-VGh1LCAyOCBEZWM%3D,ots-29,otc-FFFFFF,oy-612,ox-24:q-80/et00358308-cwyhyrqabl-portrait.jpg"
             Head="Sun Burn Goa 2023"
