--- a/blog-node/src/pages/news.astro
+++ b/blog-node/src/pages/news.astro
@@ -6,9 +6,9 @@ import Footer from '../components/Footer.astro'
 
 <body class="bg-black text-[#FFCB74]">
 	<Navbar />
-	<p class="py-20 text-lg lg:text-2xl lg:mx-40 mx-14">Welcome to our Blog Node's Section! Stay up-to-date with the latest happenings and breaking news from around the world. Our writers works tirelessly to bring you with insights with wide range of articles in technology, politics, science, entertainment and much more. Whether you're looking for in-depth analysisi or quick news shorts, we've got you covered. Join us we we get deep into the current updaets adn provide engaging, well approved content on the web with just a few taps away.</p>
+	<p class="py-20 text-2xl lg:text-2xl lg:mx-40 mx-40">Welcome to our Blog Node's Section! Stay up-to-date with the latest happenings and breaking news from around the world. Our writers works tirelessly to bring you with insights with wide range of articles in technology, politics, science, entertainment and much more. Whether you're looking for in-depth analysisi or quick news shorts, we've got you covered. Join us we we get deep into the current updaets adn provide engaging, well approved content on the web with just a few taps away.</p>
 	<!-- <h1>This is news</h1> -->
-	<main class="grid grid-cols-2 lg:grid-cols-3 lg:gap-5 gap-16 lg:p-5 p-14">
+	<main class="grid grid-cols-1 lg:grid-cols-3 lg:gap-5 gap-16 lg:p-5 p-14">
 		<!-- <div class="top-news">
 		</div> -->
 		<Card 
