--- a/blog-node/src/components/JobCard.astro
+++ b/blog-node/src/components/JobCard.astro
@@ -3,7 +3,7 @@ const {Logo, Name, Rating,Review, Bio,Link} = Astro.props;
 import Star from '/images/Star.png'
 ---
 
-<div class="job-card bg-[#181818] rounded-md hover:shadow-slate-800 shadow-md space-y-1 p-3 hover:shadow-md hover:scale-105 transition-transform">
+<div class="job-card bg-[#181818] rounded-md hover:shadow-slate-800 shadow-md space-y-1 p-3 hover:shadow-md hover:scale-105 transition-transform lg:mx-0 mx-32">
     <img src={Logo} alt="" class="border mx-auto rounded-md">
     <h1 class="text-lg font-semibold">{Name}</h1>
     <div class="p-txt p-1 flex flex-col items-center m-10 rounded-md text-sm">
